--- a/2023-1/apunte/Cap.01.tex
+++ b/2023-1/apunte/Cap.01.tex
@@ -93,7 +93,7 @@ $$
 \begin{proof}
 Veremos que  $a(-b) = -(ab)$. Los otros casos se dejan como ejercicio para el lector.
 
-Una forma de demostrar este caso es  observando que $-(ab)$ es el inverso aditivo de $ab$ y comprobando que $a(-b)$ es también inverso aditivo de $ab$. Luego, por unicidad del inverso aditivo, de deduce que $a(-b) = -(ab)$. 
+Una forma de demostrar este caso es  observando que $-(ab)$ es el inverso aditivo de $ab$ y comprobando que $a(-b)$ es también inverso aditivo de $ab$.
 \begin{alignat*}2
 ab + a(-b) &=a(b-b) &\qquad &\text{axioma \ref{axioma-i5}} \\
 &=a\cdot 0 &\qquad &\text{axioma \ref{axioma-i4}}\\
@@ -138,7 +138,7 @@ $$\begin{aligned}
 
 \begin{section}{Ordenando los enteros}\label{seccion-ordenando-los-enteros}
 
-El orden natural de los enteros es tan importante como sus propiedades aritméticas. Desde el comienzo aprendemos los números en el orden $1, 2, 3, 4, 5,$ y el hecho de que $4$ es ``mayor'' que $3$ se convierte en algo de importancia práctica para nosotros. Expresamos esta idea formalmente diciendo que existe una relación que indicamos ``$<$'' ($a < b$ se lee: $a$ es menor que $b$ o también $b$ es mayor que $a$). 
+El orden natural de los enteros es tan importante como sus propiedades aritméticas. Desde el comienzo aprendemos los números en el orden $1, 2, 3, 4, 5,$ y el hecho de que $4$ es ``mayor'' que $3$ se convierte en algo de importancia práctica para nosotros. Expresamos esta idea formalmente diciendo que existe una relación que indicamos ``$<$'' ($a < b$ se lee: $a$ es menor que $b$). 
 
 Solo cuatro axiomas se necesitan para especificar las propiedades básicas del símbolo $<$ , y ellos son listados en lo que sigue. La numeración de los axiomas se continúa de la sección \ref{seccion-aritmetica}. Como antes, $a$, $b$ y $c$ denotan enteros arbitrarios.
 
@@ -155,7 +155,7 @@ $$
 \end{enumerate}
 
 
-Esta claro que podemos definir los otros símbolos de orden $>$, $\le$ y $\ge$, en términos de los símbolos $<$ e $=$. Diremos que $m>n$ si  $n<m$, diremos que $m \le n$ si $m<n$ o $m=n$. Finalmente, diremos que $m \ge n$ si $m > n$ o $m=n$.  Es importante notar que el  axioma \ref{axioma-i11} tiene una versión valedera para estos nuevos símbolos.
+Esta claro que podemos definir los otros símbolos de orden $>$, $\le$ y $\ge$, en términos de los símbolos $<$ e $=$. Diremos que $m>n$, o que $m$ es mayor que $n$, si  $n<m$, diremos que $m \le n$ si $m<n$ o $m=n$. Finalmente, diremos que $m \ge n$ si $m > n$ o $m=n$.  Es importante notar que el  axioma \ref{axioma-i11} tiene una versión valedera para estos nuevos símbolos.
 \begin{enumerate}[label=\textit{\alph*)}]
 \item \textbf{($>$)} Si $a > b$ y $c>0$, entonces $ac > bc$.
 \item \textbf{($\le$)} Si $a \le b$ y $0 \le c$, entonces $ac \le bc$.
@@ -347,7 +347,7 @@ $$
 $$
 Esta la forma más usada en la práctica.
 
-Nuestro primer uso del axioma del buen orden será para justificar un procedimiento muy usual. Frecuentemente encontramos una expresión de la forma $u_n$, donde $n$ indica cualquier entero positivo: por ejemplo, podríamos tener $u_n=3n+2$, o $u_n = (n+1)(n+2)(n+3)$. En estos ejemplos $u_n$ es dado por una fórmula explícita y no existe dificultad en calcular $u_n$ cuando se nos da un valor específico para $n$. Sin embargo en muchos casos no conocemos una fórmula para $u_n$; es más, nuestro problema puede ser encontrarla. En estos casos pueden darnos ciertos valores de $u_n$ para enteros positivos $n$ peque\~nos, y una relación entre el $u_n$ general y algunos de los $u_r$ con $r<n$. Por ejemplo, supongamos nos es dado 
+Nuestro primer uso del axioma del buen orden será para justificar un procedimiento muy usual. Frecuentemente encontramos una expresión de la forma $u_n$, donde $n$ indica cualquier entero positivo: por ejemplo, podríamos tener $u_n=3n+2$, o $u_n = (n+1)(n+2)(n+3)$. En estos ejemplos $u_n$ es dado por una fórmula explícita o \textit{cerrada} y no existe dificultad en calcular $u_n$ cuando se nos da un valor específico para $n$. Sin embargo en muchos casos el valor de $u_n$ viene dado por los valores anteriores y no conocemos una fórmula cerrada; es más, nuestro problema puede ser encontrarla. En estos casos pueden darnos ciertos valores de $u_n$ para enteros positivos $n$ peque\~nos, y una relación entre el $u_n$ general y algunos de los $u_r$ con $r<n$. Por ejemplo, supongamos nos es dado 
 $$ 
 u_1=1, \qquad u_2=2, \qquad u_n =u_{n-1} +u_{n-2}, \qquad n\ge 3.
 $$
@@ -380,7 +380,7 @@ Ideas similares pueden aplicarse a la definición de productos tal como $n!$ (qu
 $$
 n!=1 \cdot 2 \cdot 3 \cdots n,
 $$
-el significado es bastante claro para cualquiera. Pero para precisar (y hacerlo claro para una computadora) debemos usar las definiciones recursivas.
+el significado es bastante claro para cualquiera. Pero para precisar debemos usar las definiciones recursivas.
 
 \begin{definicion} Sea $n \in \N$ sean $a_i$  para $1 \le i \le n$, una secuencia de números (enteros, reales, etc.). Entonces $\sum_{i=1}^{n} a_i$  denota la función recursiva definida  
     $$
@@ -433,9 +433,11 @@ Por completitud,  definimos $x^0=1$.
 \begin{section}{El principio de inducción}\label{seccion-principio-de-induccion}
 
 Supongamos que nos piden que demostremos el resultado
-$$
-1+3+5+\cdots+(2n-1) = n^2.
-$$
+\begin{equation}\label{eq-sumatoria-impares}
+    1+3+5+\cdots+(2n-1) = n^2.
+\end{equation}
+
+
 En otras palabras, debemos demostrar que la expresión de la izquierda definida recursivamente es igual a la expresión definida explícitamente por la fórmula de la derecha, para todos los enteros positivos $n$. Podemos proceder como sigue.
 
 La fórmula es ciertamente correcta cuando $n=1$ puesto que $1=1^2$.  Supongamos que es correcta para un valor específico de $n$, digamos para $n=k$, de modo que
@@ -443,18 +445,24 @@ $$
 1+3+5+\cdots+(2k-1) = k^2.
 $$
 Podemos usar esto para simplificar la expresión definida recursivamente a la izquierda cuando $n$ es igual a $k+1$,
-$$
-\begin{aligned}
-1+3+5+\cdots+(2k+1) &= 1+3+5+\cdots+(2k-1) +(2k+1) \\
-&=k^2 +(2k+1) \\
-&=(k+1)^2.
-\end{aligned}
-$$
+\begin{equation} \label{es-dem-sumatoria-impares}
+    \begin{aligned}
+        1+3+5+\cdots+(2k+1) &= 1+3+5+\cdots+(2k-1) +(2k+1) \\
+        &=k^2 +(2k+1) \\
+        &=(k+1)^2.
+    \end{aligned}
+\end{equation}
+
+
 Por lo tanto si el resultado es correcto cuando $n=k$, entonces lo es cuando $n=k+1$. Se comienza observando que si es correcto cuando $n=1$, debe ser por lo tanto correcto cuando $n=2$. Con el mismo argumento como es correcto cuando $n=2$ debe serlo cuando $n=3$. Continuando de esta forma veremos que es correcto para todos los enteros positivos $n$.
 
 La esencia de este argumento es comúnmente llamada \textit{principio de inducción}. Es una técnica poderosa, fácil de aplicar y la aplicaremos frecuentemente. Pero primero debemos examinar sus bases lógicas y para hacerlo necesitamos una formulación más general. 
 
 Supongamos que queremos demostrar que un resultado es verdadero para todo $n \in \mathbb N$. Con $S$ denotemos al subconjunto de $\mathbb N$ para el cual el resultado es correcto: por supuesto, nuestra intención es probar que $S$ es todo $\mathbb N$. El primer paso es probar que $1$ pertenece a $S$, y luego demostraremos que si $k$ pertenece a $S$, también $k+1$. Entonces lo pensamos paso a paso, un procedimiento infinito, y concluimos que $S=\mathbb N$. Afortunadamente el pensarlo paso a paso no es esencial debido a que el principio de inducción es consecuencia de los axiomas que elegimos tan cuidadosamente para $\mathbb Z$ y $\mathbb N$. Más específicamente es consecuencia del axioma del buen orden.
+
+Veamos esto aplicado al ejemplo anterior: supongamos que la fórmula  (\ref{eq-sumatoria-impares}) no fuera cierta,  es decir que el conjunto de números naturales que no cumplen con la fórmula no es vacío. Por el principio de buena ordenación ese conjunto tiene un mínimo, digamos $m$. Como hemos visto más arriba $m > 1$ y por lo tanto $m-1 \in \N$. Como $m$ era el mínimo número natural que no cumplía la formula, es claro que $m-1$ sí la cumple. Haciendo un desarrollo similar a (\ref{es-dem-sumatoria-impares}) obtenemos que $m$  cumple con la fórmula, con lo cual se llega a un absurdo  que vino de suponer que la fórmula era falsa. Este razonamiento puede ser generalizado en el siguiente teorema. 
+
+
 
 \begin{teorema}[Principio de inducción]\label{teorema-principio-de-induccion} Supongamos que $S$ es un subconjunto de $\mathbb N$ que satisface las condiciones \index{principio de inducción}
 \begin{enumerate}[label=\textit{\alph*)}]
