Enteros Terminado de revisar capítulo 1

--- a/2023-1/apunte/Cap.01.tex
+++ b/2023-1/apunte/Cap.01.tex
@@ -582,7 +582,7 @@ Entonces $P(n)$ es verdadera para todo $n \ge n_0$.
 \begin{ejemplo*}
 Sean $$u_1 = 3,\qquad u_2 = 5,\qquad u_n = 3u_{n-1}- 2u_{n-2},\qquad  n \ge 3.$$
 Probemos que $u_n = 2^n + 1$, para todo $n \in  \mathbb N$.
-\begin{proof}[Solución] Aquí usaremos una extensión natural del principio de inducción: en este caso, el caso base es $n=1$ y $n=2$.
+\begin{proof}[Solución] Aquí el caso base es $2$, pero para demostrar el resultado debemos verificar el resultado para $n= 1, 2$ y por lo tanto nos tomaremos la licencia de decir que el caso base es $n=1$ y $n=2$.
 
 \noindent(\textit{Caso  base}) El resultado es verdadero cuando $n= 1$ pues $3 = 2^1+1$ y para $n=2$ pues $ 5 =2^2+1$.
 
